Add link in info (github and website)

--- a/resume-fr.tex
+++ b/resume-fr.tex
@@ -16,10 +16,10 @@
 \title{Stage de fin de tronc commun\protect\\Septembre 2016 - Janvier 2017}
 \address{3 Rue Maurice Berteaux}{Velizy-Villacoublay 78140}
 \email{antoinepiriou@gmail.com}
-%\homepage{genfinter.net}
+\homepage{genfinter.net}
 \mobile{+33~(0)~6~69~41~52~65}
 \social[linkedin]{genfinternet}
-%\social[github]{genfinternet}
+\social[github]{genfinternet}
 
 \quote{Etudiant ingénieur IT, passionné par l'informatique sous toutes ses formes}
 
