Fix phone number and correct grammar

--- a/resume-fr.tex
+++ b/resume-fr.tex
@@ -17,7 +17,7 @@
 \address{3 Rue Maurice Berteaux}{Velizy-Villacoublay 78140}
 \email{antoinepiriou@gmail.com}
 \homepage{genfinter.net}
-\mobile{+33~(0)~6~69~41~52~65}
+\mobile{+33~(0)~6~59~41~52~65}
 \social[linkedin]{genfinternet}
 \social[github]{genfinternet}
 
@@ -33,8 +33,8 @@
 \tldatecventry{2015}{2015}{Echange}{UQAC}{Canada}{Programme court de premier cycle en informatique pour étudiants en séjour d'études}
 
 \section{Expérience}
-\tldatecventry{2009}{2016}{Vendeur}{Paris}{Stage}{Vendeur de produits fermier
-durants les vacances scolaires (Ferme de Viltain)}
+\tldatecventry{2009}{2016}{Vendeur}{Paris}{Stage}{Vendeur de produits fermiers
+durant les vacances scolaires (Ferme de Viltain)}
 \tldatecventry{2011}{2016}{Serveur}{Paris}{Job étudiant}{Service de table dans un petit
 restaurant durant les week-ends}
 
