Change C skill to bold

--- a/resume-fr.tex
+++ b/resume-fr.tex
@@ -66,7 +66,7 @@ sur un serveur distant}
 
 \section{Compétences informatiques}
 \cvitem{\textbf{OS:}} {Windows, Linux}
-\cvitem{\textbf{Langages:}}{C, \textbf{C++}, C\#, \textbf{Java}, Java (Android), Python, Shell, SQL}
+\cvitem{\textbf{Langages:}}{\textbf{C}, \textbf{C++}, C\#, \textbf{Java}, Java (Android), Python, Shell, SQL}
 \cvitem{\textbf{Outils:}}{\textbf{Git}, Intellij-idea, Visual Studio, vim, gdb, valgrind}
 \cvitem{\textbf{Logiciels:}}{Microsoft Office, MS Project}
 
