--- a/resume-fr.tex
+++ b/resume-fr.tex
@@ -1,5 +1,4 @@
 \documentclass[11pt,a4paper,sans]{moderncv}
-\usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{multicol}
 \moderncvstyle{classic}
@@ -13,7 +12,7 @@
 \firstname{Antoine}
 \familyname{PIRIOU}
 
-\title{Stage de fin de tronc commun\protect\\Septembre 2016 - Janvier 2017}
+\title{Stage de fin d'études\protect\\Février 2018 - Aout 2018}
 \address{3 Rue Maurice Berteaux}{Velizy-Villacoublay 78140}
 \email{antoinepiriou@gmail.com}
 \homepage{genfinter.net}
@@ -29,46 +28,32 @@
 \vspace*{-10mm}
 
 \section{Formation}
-\tldatecventry{2013}{2018}{Ingénieur IT}{EPITA}{Ecole d'ingénieur informatique}{Etudiant}
+\tldatecventry{2013}{2018}{Ingénieur IT}{EPITA}{Ecole d'ingénieur informatique}{Etudiant en majeure MTI (Multimédia et Technologies de l'Information)}
 \tldatecventry{2015}{2015}{Echange}{UQAC}{Canada}{Programme court de premier cycle en informatique pour étudiants en séjour d'études}
 
 \section{Expérience}
+\subsection{Stages de développement}
+\tldatecventry{2016}{2017}{}{Développeur Android chez eduPad sur l'application Monster Messenger}{}
+{
+  \begin{itemize}
+  \item \textbf{Languages utilisés:} {Java, Kotlin, Ruby on Rails}
+  \end{itemize}
+}
+
+\subsection{Autres stages}
 \tldatecventry{2009}{2016}{Vendeur}{Paris}{Stage}{Vendeur de produits fermiers
 durant les vacances scolaires (Ferme de Viltain)}
-\tldatecventry{2011}{2016}{Serveur}{Paris}{Job étudiant}{Service de table dans un petit
+\tldatecventry{2011}{2017}{Serveur}{Paris}{Job étudiant}{Service de table dans un petit
 restaurant durant les week-ends}
 
 \subsection{Projets d'école}
-\tldatecventry{2012}{Hepta}{Java}{}{Jeu de plateau pouvant se jouer à deux, ou
-contre une I.A}
-{
-  \begin{itemize}
-  \item \textbf{Technologies utilisées:} Swing
-  \item \textbf{Equipe:} {Deux personnes}
-  \end{itemize}
-}
-\tldatecventry{2013}{Archein AVS}{C\#}{}{Jeu de plateforme contenant un
-éditeur de niveaux}
-{
-  \begin{itemize}
-  \item \textbf{Technologies utilisées:} XNA 4.0
-  \item \textbf{Equipe:} {Quatre personnes}
-  \end{itemize}
-}
-\tldatecventry{2016}{RAM}{Java}{}{Création d'une I.A. de conquête d'un monde 3D
-sur un serveur distant}
-{\begin{itemize}
-  \item \textbf{Particularité:} {Réalisé en 36 heures}
-  \item \textbf{Technologies utilisées:} Unirest, Gson
-  \item \textbf{Equipe:} {Une personne}
-\end{itemize}
-}
+\tldatecventry{2017}{Velib'}{Java Android}{}{Reproduction des fonctionnalités principales de l'applications velib'}{}
 
 \section{Compétences informatiques}
-\cvitem{\textbf{OS:}} {Windows, Linux}
-\cvitem{\textbf{Langages:}}{\textbf{C}, \textbf{C++}, C\#, \textbf{Java}, Java (Android), Python, Shell, SQL}
-\cvitem{\textbf{Outils:}}{\textbf{Git}, Intellij-idea, Visual Studio, vim, gdb, valgrind}
-\cvitem{\textbf{Logiciels:}}{Microsoft Office, MS Project}
+\cvitem{\textbf{OS:}} {Windows, Linux, MacOS}
+\cvitem{\textbf{Langages:}}{\textbf{Java}, \textbf{Kotlin}, Python, C, C++, C\#, Shell, SQL}
+\cvitem{\textbf{Outils:}}{\textbf{Android Studio}, \textbf{Git}, Intellij-idea, Visual Studio, vim, gdb, valgrind}
+\cvitem{\textbf{Autres:}}{Jira, Google Analytics, Microsoft Office}
 
 \section{Langues}
 \tldatecventry{2016}{Anglais}{TOEIC officiel}{930}{Courant}{}
